Add Setup Instructions

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 APP_NAME=Statamic
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:8IitaGuNe4MEmmsGg8De6DjJYVnr1ab9BgGAINOaXlY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://statamic-multiple-assets-query-issue.test
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
