--- a/resources/blueprints/assets/assets.yaml
+++ b/resources/blueprints/assets/assets.yaml
@@ -1,8 +1,12 @@
 title: Asset
-fields:
-  -
-    handle: alt
-    field:
-      display: 'Alt Text'
-      type: text
-      instructions: 'Description of the image'
+tabs:
+  main:
+    sections:
+      -
+        fields:
+          -
+            handle: alt
+            field:
+              display: 'Alt Text'
+              type: text
+              instructions: 'Description of the image'
